# mod_core

./: .gitignore  CMakeLists.txt  ExternalFSCore.props  Makefile.am  freeswitch.i  freeswitch_core.cpp  freeswitch_core.h  freeswitch_wrap.cxx  mod_core.cpp  runswig.sh  switch_platform.i
core/: AssemblyInfo.cs  ChannelVariables.cs  Extensions.cs  Loader.cs  Log.cs  Makefile  ManagedSession.cs  PluginInterfaces.cs  PluginManager.cs  ScriptPluginManager.cs  Util.cs  XmlSearchBinding.cs  hack.diff  swig.cs
